<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/P500"
    tools:context=".MainActivity">

<!--
    <color name="500">#3F51B5</color>
    <color name="100">#C5CAE9</color>
    <color name="700">#303F9F</color>

    <color name="A200">#FF4081</color>
    <color name="A100">#FF80AB</color>
    <color name="400">#F50057</color>
    -->

    <TextView
        android:id="@+id/top_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textStyle="bold"
        android:text="@string/author"
        android:textColor="@color/A200"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/subject_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"
        android:text="@string/courseTitle"
        android:textSize="24sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/A100"
        android:layout_marginBottom="16dp"
        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <Button
                android:id="@+id/project_one"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttonshape"
                android:onClick="projectClick"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/buttonLabel_project_one"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/projecte_two"

                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttonshape"
                android:onClick="projectClick"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/buttonLabel_project_two"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/projecte_three"

                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttonshape"
                android:onClick="projectClick"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/buttonLabel_project_three"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/projecte_four"

                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttonshape"
                android:onClick="projectClick"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/buttonLabel_project_four"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/projecte_five"

                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttonshape"
                android:onClick="projectClick"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/buttonLabel_project_five"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/projecte_six"

                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttonshape"
                android:onClick="projectClick"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/buttonLabel_project_six"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/projecte_seven"

                android:layout_width="270dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttonshape"
                android:onClick="projectClick"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/buttonLabel_project_seven"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
